--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 theme: jekyll-theme-architect
 title: Christophe's site
 show_downloads: true
+default:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
+   
