--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ default:
     scope:
       path: "" # an empty string here means all files in the project
     values:
-      layout: "midnight"
+      layout: "default"
    
