--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ default:
       path: "" # an empty string here means all files in the project
       type: "pages"
     values:
-      layout: "midnight"
+      layout: "default"
    
